--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-/home/riteshs/CODINGspace/ProjectPython/__pycache__/example.cpython-310.pyc
-/home/riteshs/CODINGspace/ProjectPython/__pycache__
+example.cpython-310.pyc
